// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebAuthN Transformer Tests WebAuthN Challenge Tests should only render title and description elements when WebAuthN API is not available 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.verify.webauth.title",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "class": "ERROR",
          "dataSe": "callout",
          "message": Object {
            "class": "ERROR",
            "i18n": Object {
              "key": "oie.webauthn.error.not.supported",
            },
            "message": "oie.webauthn.error.not.supported",
          },
        },
        "type": "InfoBox",
      },
      Object {
        "elements": Array [
          Object {
            "key": "cant-verify",
            "options": Object {
              "content": Object {
                "elements": Array [
                  Object {
                    "noMargin": true,
                    "options": Object {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.title",
                      "level": 3,
                      "visualLevel": 6,
                    },
                    "type": "Heading",
                  },
                  Object {
                    "noMargin": true,
                    "options": Object {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.description1",
                    },
                    "type": "Description",
                  },
                  Object {
                    "options": Object {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.description2",
                    },
                    "type": "Description",
                  },
                  Object {
                    "noMargin": true,
                    "options": Object {
                      "content": "oie.verify.webauthn.cant.verify.security.key.title",
                      "level": 3,
                      "visualLevel": 6,
                    },
                    "type": "Heading",
                  },
                  Object {
                    "options": Object {
                      "content": "oie.verify.webauthn.cant.verify.security.key.description",
                    },
                    "type": "Description",
                  },
                ],
                "type": "VerticalLayout",
              },
              "id": "cant-verify",
              "summary": "oie.verify.webauthn.cant.verify",
            },
            "type": "AccordionPanel",
          },
        ],
        "type": "Accordion",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`WebAuthN Transformer Tests WebAuthN Challenge Tests should render title, description and button elements when WebAuthN API is available 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.verify.webauth.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.verify.webauthn.instructions",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "onClick": [Function],
          "step": "challenge-authenticator",
          "submitOnLoad": true,
        },
        "type": "WebAuthNSubmitButton",
      },
      Object {
        "elements": Array [
          Object {
            "key": "cant-verify",
            "options": Object {
              "content": Object {
                "elements": Array [
                  Object {
                    "noMargin": true,
                    "options": Object {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.title",
                      "level": 3,
                      "visualLevel": 6,
                    },
                    "type": "Heading",
                  },
                  Object {
                    "noMargin": true,
                    "options": Object {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.description1",
                    },
                    "type": "Description",
                  },
                  Object {
                    "options": Object {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.description2",
                    },
                    "type": "Description",
                  },
                  Object {
                    "noMargin": true,
                    "options": Object {
                      "content": "oie.verify.webauthn.cant.verify.security.key.title",
                      "level": 3,
                      "visualLevel": 6,
                    },
                    "type": "Heading",
                  },
                  Object {
                    "options": Object {
                      "content": "oie.verify.webauthn.cant.verify.security.key.description",
                    },
                    "type": "Description",
                  },
                ],
                "type": "VerticalLayout",
              },
              "id": "cant-verify",
              "summary": "oie.verify.webauthn.cant.verify",
            },
            "type": "AccordionPanel",
          },
        ],
        "type": "Accordion",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`WebAuthN Transformer Tests WebAuthN Challenge Tests should render title, description, button and can't verify link elements for appName = Okta_Authenticaotr when WebAuthN API is available 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.verify.webauth.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.verify.webauthn.instructions",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "onClick": [Function],
          "step": "challenge-authenticator",
          "submitOnLoad": true,
        },
        "type": "WebAuthNSubmitButton",
      },
      Object {
        "elements": Array [
          Object {
            "key": "cant-verify",
            "options": Object {
              "content": Object {
                "elements": Array [
                  Object {
                    "options": Object {
                      "items": Array [
                        "oie.verify.webauthn.cant.verify.enrollment.step1",
                        "oie.verify.webauthn.cant.verify.enrollment.step2",
                        "oie.verify.webauthn.cant.verify.enrollment.step3",
                        "oie.verify.webauthn.cant.verify.enrollment.step4",
                      ],
                      "type": "ol",
                    },
                    "type": "List",
                  },
                ],
                "type": "VerticalLayout",
              },
              "id": "cant-verify",
              "summary": "oie.verify.webauthn.cant.verify",
            },
            "type": "AccordionPanel",
          },
        ],
        "type": "Accordion",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`WebAuthN Transformer Tests WebAuthN Challenge Tests should render title, description, button, and user verification elements when WebAuthN API is available in Safari Browser 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.verify.webauth.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.verify.webauthn.instructions",
        },
        "type": "Description",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.verify.webauthn.uv.required.instructions",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "onClick": [Function],
          "step": "challenge-authenticator",
          "submitOnLoad": false,
        },
        "type": "WebAuthNSubmitButton",
      },
      Object {
        "elements": Array [
          Object {
            "key": "cant-verify",
            "options": Object {
              "content": Object {
                "elements": Array [
                  Object {
                    "noMargin": true,
                    "options": Object {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.title",
                      "level": 3,
                      "visualLevel": 6,
                    },
                    "type": "Heading",
                  },
                  Object {
                    "noMargin": true,
                    "options": Object {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.description1",
                    },
                    "type": "Description",
                  },
                  Object {
                    "options": Object {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.description2",
                    },
                    "type": "Description",
                  },
                  Object {
                    "noMargin": true,
                    "options": Object {
                      "content": "oie.verify.webauthn.cant.verify.security.key.title",
                      "level": 3,
                      "visualLevel": 6,
                    },
                    "type": "Heading",
                  },
                  Object {
                    "options": Object {
                      "content": "oie.verify.webauthn.cant.verify.security.key.description",
                    },
                    "type": "Description",
                  },
                ],
                "type": "VerticalLayout",
              },
              "id": "cant-verify",
              "summary": "oie.verify.webauthn.cant.verify",
            },
            "type": "AccordionPanel",
          },
        ],
        "type": "Accordion",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`WebAuthN Transformer Tests WebAuthN Enroll Tests should only render title and description elements when WebAuthN API is not available 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "enroll-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.enroll.webauthn.title",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "class": "ERROR",
          "dataSe": "callout",
          "message": Object {
            "class": "ERROR",
            "i18n": Object {
              "key": "oie.webauthn.error.not.supported",
            },
            "message": "oie.webauthn.error.not.supported",
          },
        },
        "type": "InfoBox",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`WebAuthN Transformer Tests WebAuthN Enroll Tests should render title, description and button elements when WebAuthN API is available 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "enroll-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.enroll.webauthn.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.enroll.webauthn.instructions",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "onClick": [Function],
          "step": "enroll-authenticator",
          "submitOnLoad": false,
        },
        "type": "WebAuthNSubmitButton",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`WebAuthN Transformer Tests WebAuthN Enroll Tests should render title, description, button and userVerification required elements when WebAuthN API is available 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "enroll-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.enroll.webauthn.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.enroll.webauthn.instructions",
        },
        "type": "Description",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.enroll.webauthn.uv.required.instructions",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "onClick": [Function],
          "step": "enroll-authenticator",
          "submitOnLoad": false,
        },
        "type": "WebAuthNSubmitButton",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`WebAuthN Transformer Tests WebAuthN Enroll Tests should render title, description, button, and callout elements when WebAuthN API is available on MS Edge browser 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "enroll-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.enroll.webauthn.title",
        },
        "type": "Title",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.enroll.webauthn.instructions",
        },
        "type": "Description",
      },
      Object {
        "contentType": "subtitle",
        "options": Object {
          "content": "oie.enroll.webauthn.instructions.edge",
        },
        "type": "Description",
      },
      Object {
        "options": Object {
          "onClick": [Function],
          "step": "enroll-authenticator",
          "submitOnLoad": false,
        },
        "type": "WebAuthNSubmitButton",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
